--- a/package.json
+++ b/package.json
@@ -10,32 +10,50 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.6",
-    "@hookform/resolvers": "^3.3.4",
+    "@ffmpeg/core": "^0.9.0",
+    "@ffmpeg/ffmpeg": "^0.9.8",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@remotion/animation-utils": "^4.0.212",
+    "@remotion/cli": "4.0.221",
+    "@remotion/layout-utils": "^4.0.212",
+    "@remotion/media-utils": "^4.0.212",
+    "@remotion/player": "^4.0.212",
+    "@remotion/transitions": "^4.0.212",
     "@stripe/stripe-js": "^2.4.0",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-cloudinary": "^5.20.0",
+    "next-themes": "^0.3.0",
     "qs": "^6.11.2",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
+    "react-dropzone": "^14.2.9",
+    "react-hook-form": "^7.53.0",
+    "remotion": "4.0.221",
+    "sonner": "^1.5.0",
     "stripe": "^14.16.0",
     "svix": "^1.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
