--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@ffmpeg/core": "^0.9.0",
     "@ffmpeg/ffmpeg": "^0.9.8",
     "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@remotion/animation-utils": "^4.0.212",
@@ -30,6 +30,7 @@
     "@remotion/player": "^4.0.212",
     "@remotion/transitions": "^4.0.212",
     "@stripe/stripe-js": "^2.4.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
@@ -45,7 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.9",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.1",
     "remotion": "4.0.221",
     "sonner": "^1.5.0",
     "stripe": "^14.16.0",
